tests/fixtures/pass/add_trait_nominal_i32_nominal_output.sali
let Add(Rhs: type) = trait {
  let Output: type
  let add(move self)(move rhs: Rhs): Output
}

let Number = struct(value: i32)

extend Number: Add(i32) {
  let Output = Number
  let add(move self)(move rhs: i32): Number = Number(self.value + rhs)
}

let main(): i32 = {
  let answer = Number(40) + 2
  answer.value
}
